--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>ECP-BV|QA</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
-    <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiODMwYjk2MDEtMWIyYi00MDUyLTgyMDktZjg1YTY0NGYyYWRhIiwidCI6ImZjMDA1NDdhLTI0YmItNGU0Zi05ZDYxLTczZmNhNWViOWRmMyIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+    <div class="container-fluid">
+        <div class="ratio ratio-4x3">
+            <iframe title="Report Section" src="https://app.powerbi.com/view?r=eyJrIjoiODMwYjk2MDEtMWIyYi00MDUyLTgyMDktZjg1YTY0NGYyYWRhIiwidCI6ImZjMDA1NDdhLTI0YmItNGU0Zi05ZDYxLTczZmNhNWViOWRmMyIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+        </div>
+    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
