--- a/index.html
+++ b/index.html
@@ -1,28 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>ECP-BV|QA</title>
-</head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LME452V7M"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-6LME452V7M"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-  gtag('config', 'G-6LME452V7M');
-</script>
-<body>
-    <div class="container-fluid">
-        <div class="ratio ratio-4x3">
-            <iframe title="Report Section" src="https://app.powerbi.com/view?r=eyJrIjoiODMwYjk2MDEtMWIyYi00MDUyLTgyMDktZjg1YTY0NGYyYWRhIiwidCI6ImZjMDA1NDdhLTI0YmItNGU0Zi05ZDYxLTczZmNhNWViOWRmMyIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+        gtag('config', 'G-6LME452V7M');
+        </script>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Diego Baron - CV</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Diego Baron</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Perfil.jpg" alt="..." /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre mí</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educación</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Intereses</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Logros</a></li> -->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" target="_blank" href="assets/archivos/hv/CV_Diego Baron.pdf">Mí CV completo</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">Diego<span class="text-primary">Baron</span></h1>
+                    <div class="subheading mb-5">
+                        <a href="mailto:name@email.com">diegoivanbaron@gmail.com</a>
+                    </div>
+                    <p class="lead mb-5">Ingeniero y tecnólogo industrial, con experiencia laboral en planeación, seguimiento y control de proyectos, Data Analyst.
+                        Interés de ejercer roles de “project manager” con énfasis en tecnología, nuevas tendencias laborales desde el mundo de la programación y la ciencia de datos. Amplios conocimientos en la administración de proyectos de infraestructura y liderando procesos, resolviendo necesidades de clientes para enfocarlas en la entrega de soluciones digitales.
+                    </p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.linkedin.com/in/barondiego/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/BaronDiego"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/barondiego"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experiencia</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Interventor de Planificación y Costos ANI</h3>
+                            <div class="subheading mb-3">Algranel S.A.</div>
+                            <p>Diseñar y desarrollar reportes, cuadros de mando u otras herramientas para el planeamiento, seguimiento y control de proyectos. En los últimos tres (3) meses lidere el proyecto ANI, desarrollé dashboard en Power BI para distintos departamentos de la compañía, determine la capacidad y cuello de botella de una central de cargue, desarrolle dos aplicativos webs para la medición de taques y control de inventaritos.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">septiembre 2020 a junio 20223</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Programador y control de proyectos</h3>
+                            <div class="subheading mb-3">Tecnitanques Ingenieros S.A.S.</div>
+                            <p>Programador y control de proyecto para el DISEÑO, SUMINISTRO, FABRICACIÓN, MONTAJE Y PUESTA EN MARCHA DE CUATRO (04) SILOS CON SUS TRANSPORTADORES Y LA OPTIMIZACIÓN DE DESPACHO EN PLANTA 1 en la SOCIEDAD PORTUARIA DE SANTA MARTA</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">enero 2020 a septiembre 2020</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Programador y control de proyectos</h3>
+                            <div class="subheading mb-3">Tecnitanques Ingenieros S.A.S. </div>
+                            <p>Programador y control de proyecto para el “Contrato CG-BU-3101. Diseño, fabricación y instalación de las estructuras metálicas necesarias para el proyecto minero de Buritica”</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">noviembre 2018 a enero 2020 </span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Programador y control de proyectos</h3>
+                            <div class="subheading mb-3">Tecnitanques Ingenieros S.A.S.</div>
+                            <p>Programador y control de proyecto para el “Contrato 9800002959. Diseño, compra, obras de construcción civil mecánica y de interconexión para el tanque SKIM de 10 KBLS”</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">junio 2018 a noviembre 2018</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Programador y control de proyectos</h3>
+                            <div class="subheading mb-3">Subsuelos S.A.S.</div>
+                            <p>Programador de obra para el proyecto “PILOTAJE DE LA CENTRAL CERVECERA DE COLOMBIA”. Encargado de la elaboración de informes diarios, semanales, mensuales, control de materiales y realización de cortes de obra para facturación.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">junio 2018 a noviembre 2018</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Educación</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Fundación de Educación de Superior San José</h3>
+                            <div class="subheading mb-3">Ingeniero Industrial</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Universidad Distrital Francisco José de caldas</h3>
+                            <div class="subheading mb-3">Tecnólogo Industrial</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Fundación de Educación de Superior San José</h3>
+                            <div class="subheading mb-3">Diplomado en inteligencia de negocios</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">udemy</h3>
+                            <div class="subheading mb-3">Curso Power BI – Análisis de Datos y Business Intelligence </div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">udemy</h3>
+                            <div class="subheading mb-3">Aprende a realizar proyecciones y pronósticos en Excel</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Fundación de egresados universidad distrital</h3>
+                            <div class="subheading mb-3">Project profesional planificación y control de proyectos alineados al PMI </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Habilidades</h2>
+                    <div class="subheading mb-3">Lenguajes  de programación y herramientas tecnológicas</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-file-excel"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-microsoft"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-chart-simple"></i></li>
+                    </ul>
+                    <div class="subheading mb-3">Habilidades blandas</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Pensamiento crítico – Resolución de problemas
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Trabajo en equipo – Capacidad de organización
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Adaptabilidad – Autonomía
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Iniciativa
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Intereses</h2>
+                    <p>Autodidacta por convicción, mi recorrido al sitio de trabajo lo realizo en bicicleta, me apasiona el mundo digital, disfruto el tiempo que comparto con mis familiares, paso gran parte de mi tiempo libre explorando los últimos avances tecnológicos.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+
+            <!-- <section class="resume-section" id="awards">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Google Analytics Certified Developer
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Mobile Web Specialist - Google Certification
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            1
+                            <sup>st</sup>
+                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            1
+                            <sup>st</sup>
+                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            2
+                            <sup>nd</sup>
+                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            1
+                            <sup>st</sup>
+                            Place - James Buchanan High School - Hackathon 2006
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            3
+                            <sup>rd</sup>
+                            Place - James Buchanan High School - Hackathon 2005
+                        </li>
+                    </ul>
+                </div>
+            </section> -->
+
         </div>
-    </div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
