--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Diego Baron</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Perfil.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/perfil1.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -68,6 +68,20 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experiencia</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Profesional Planeación</h3>
+                            <div class="subheading mb-3">Bureau Veritas Colombia Ltda</div>
+                            <p>Realizar seguimiento, planeación y programación a las inspecciones y a los profesionales que las ejecutan
+                                •Controlar las estadísticas del proceso
+                                •Informar con oportunidad el avance financiero de los proyectos para garantizar que se cuenten con los recursos necesarios.
+                                •Sistematizar la información extraída del proceso con la finalidad de poder tomar decisiones rápidas.
+                                •Apoyar las actividades financieras que permitan tener el control de las actividades ejecutadas.
+                                Logros a la fecha: Diseñe un sistema de comunicación entre Microsoft forms, Excel y Power BI, para llevar el registro de actividades diarias de lo inspectores, y así tener estadísticas y KPI’s en tiempo real, tanto de las HH, como de la facturación del proyecto.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">septiembre 2020 a junio 20223</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Interventor de Planificación y Costos ANI</h3>
@@ -117,6 +131,12 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Educación</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Universidad Nacional Abierta y a Distancia UNAD </h3>
+                            <div class="subheading mb-3">Especialización en Ciencia de Datos y Analítica - Cursando</div>
+                        </div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Fundación de Educación de Superior San José</h3>
