--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 Logros a la fecha: Diseñe un sistema de comunicación entre Microsoft forms, Excel y Power BI, para llevar el registro de actividades diarias de lo inspectores, y así tener estadísticas y KPI’s en tiempo real, tanto de las HH, como de la facturación del proyecto.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">agosto 2023 a la fecha</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">agosto 2023 a mayo 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
