--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
                     <div class="subheading mb-5">
                         <a href="mailto:name@email.com">diegoivanbaron@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Ingeniero y tecnólogo industrial, con experiencia laboral en planeación, seguimiento y control de proyectos, Data Analyst.
-                        Interés de ejercer roles de “project manager” con énfasis en tecnología, nuevas tendencias laborales desde el mundo de la programación y la ciencia de datos. Amplios conocimientos en la administración de proyectos de infraestructura y liderando procesos, resolviendo necesidades de clientes para enfocarlas en la entrega de soluciones digitales.
+                    <p class="lead mb-5">Ingeniero industrial, con más de 10 años de experiencia en el sector de infraestructura, realizando planeación, 
+                        seguimiento y control de proyectos, elaboración de presupuesto, flujos de caja, con habilidades y conocimientos en:  
+                        programación (Python), Business Intelligence (BI), optimización y mejora de procesos, análisis financiero de proyectos, 
+                        análisis de escenarios y sensibilidad, modelamiento financiero. Soy un profesional comprometido con la investigación, 
+                        el liderazgo y apasionado por el autoaprendizaje. Mi formación en ciencia de datos me permite aportar un valor adicional a los proyectos, 
+                        donde puedo extraer información valiosa de grandes conjuntos de datos, identificar patrones y tendencias, y desarrollar modelos predictivos 
+                        que ayudan a la toma de decisiones estratégicas.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/barondiego/"><i class="fab fa-linkedin-in"></i></a>
@@ -70,6 +75,16 @@
                     <h2 class="mb-5">Experiencia</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Asistente Planner</h3>
+                            <div class="subheading mb-3">REVERGY SAS</div>
+                            <p>
+                                Elaboración de tablero de control integrando Power Bi y Excel para el seguimiento y control del proyecto de interventoría para la construcción del “Parque Solar Puerta de Oro”, en el municipio de Guaduas Cundinamarca.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">agosto 2023 a la fecha</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Profesional Planeación</h3>
                             <div class="subheading mb-3">Bureau Veritas Colombia Ltda</div>
                             <p>Realizar seguimiento, planeación y programación a las inspecciones y a los profesionales que las ejecutan
@@ -80,7 +95,7 @@
                                 Logros a la fecha: Diseñe un sistema de comunicación entre Microsoft forms, Excel y Power BI, para llevar el registro de actividades diarias de lo inspectores, y así tener estadísticas y KPI’s en tiempo real, tanto de las HH, como de la facturación del proyecto.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">agosto 2023 a la fecha</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">agosto 2023 a mayo 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -134,7 +149,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Universidad Nacional Abierta y a Distancia UNAD </h3>
-                            <div class="subheading mb-3">Especialización en Ciencia de Datos y Analítica - Cursando</div>
+                            <div class="subheading mb-3">Especialización en Ciencia de Datos y Analítica | Fecha esperada de graduación: octubre 2024</div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
