--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 Elaboración de tablero de control integrando Power Bi y Excel para el seguimiento y control del proyecto de interventoría para la construcción del “Parque Solar Puerta de Oro”, en el municipio de Guaduas Cundinamarca.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">agosto 2023 a la fecha</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">mayo 2024 a la fecha</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
