--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:name@email.com">diegoivanbaron@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Ingeniero industrial, con más de 10 años de experiencia en el sector de infraestructura, realizando planeación, 
+                    <p class="lead mb-5">Ingeniero industrial, especialista en ciencia de datos y analítica, con más de 10 años de experiencia en el sector de infraestructura, realizando planeación, 
                         seguimiento y control de proyectos, elaboración de presupuesto, flujos de caja, con habilidades y conocimientos en:  
                         programación (Python), Business Intelligence (BI), optimización y mejora de procesos, análisis financiero de proyectos, 
                         análisis de escenarios y sensibilidad, modelamiento financiero. Soy un profesional comprometido con la investigación, 
@@ -149,7 +149,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Universidad Nacional Abierta y a Distancia UNAD </h3>
-                            <div class="subheading mb-3">Especialización en Ciencia de Datos y Analítica | Fecha esperada de graduación: octubre 2024</div>
+                            <div class="subheading mb-3">Especialización en Ciencia de Datos y Analítica</div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
