--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Universidad Nacional Abierta y a Distancia UNAD </h3>
-                            <div class="subheading mb-3">Especialización en Ciencia de Datos y Analítica</div>
+                            <div class="subheading mb-3">Especialista en Ciencia de Datos y Analítica</div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
